tests/baselines/reference/esnextmodulekindWithES5Target6(strict=true).errors.txt
esnextmodulekindWithES5Target6.ts(4,20): error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.


==== esnextmodulekindWithES5Target6.ts (1 errors) ====
    export function f1(d = 0) {
    }
    
    export function f2(...arg) {
                       ~~~~~~
!!! error TS7019: Rest parameter 'arg' implicitly has an 'any[]' type.
    }
    
    export default function f3(d = 0) {
    }
    